--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -w",
-    "dev:client": "npx tsx watch client",
+    "dev:client": "npx tsx client",
     "dev:server": "npx tsx watch server"
   },
   "keywords": [],
